--- a/partners.html
+++ b/partners.html
@@ -288,6 +288,12 @@
 				</a>
 			</div> 
 
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.unina.it/home;jsessionid=572AC0B50C1EECBF4A11C5B308EABAD5.node_publisher11">
+					<img class="icon" src="images/partners/unina.jpg" style="width: 400px; margin-top: 20px">
+				</a>
+			</div> 
+
 		</div>
 
 	</div> -->
@@ -377,7 +383,7 @@
 		<div class="services-list block-1-2 block-tab-full group">
 
 			<div class="bgrid service-item animate-this">
-				<a target="_blank" href="https://new.abb.com/it"><img class="icon" src="images/partners/abb.png" style="width: 250px; margin-top: 110px"></a>
+				<a target="_blank" href="https://www.nestle.it/"><img class="icon" src="images/partners/nestle.png" style="width: 250px; margin-top: 30px"></a>
 				<div class="service-content">
 					<h3 class="h05"></h3>
 					<p style="line-height: 2rem"></p>
@@ -385,36 +391,7 @@
 			</div> <!-- end bgrid -->
 
 			<div class="bgrid service-item animate-this" style="padding-top: 5%">
-				<a target="_blank" href="https://www.skoda-auto.it/?state=NEW&aid=f893280a-26b8-4067-8125-b490abddb060"><img class="icon" src="images/partners/skoda.png" style="width: 220px; margin-top: 5px"></a>
-				<div class="service-content">
-					<h3 class="h05"></h3>
-					<p style="line-height: 2rem"></p>
-				</div>
-			</div> <!-- end bgrid -->
-
-		</div> <!-- end services-list -->
-	</div> <!-- end row -->
-
-	
-		<div class="row narrow section-intro animate-this">
-	
-		<div class="col-full">
-			<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">TEAM DESIGN 2021</h2>
-		</div> <!-- end col-full -->
-
-
-		<div class="services-list block-1-2 block-tab-full group">
-
-			<div class="bgrid service-item animate-this">
-				<a target="_blank" href="https://www.danieli.com/en/"><img class="icon" src="images/partners/danieli.svg" style="width: 350px; margin-top: 70px"></a>
-				<div class="service-content">
-					<h3 class="h05"></h3>
-					<p style="line-height: 2rem"></p>
-				</div>
-			</div> <!-- end bgrid -->
-
-			<div class="bgrid service-item animate-this" style="padding-top: 5%">
-				<a target="_blank" href="http://www.eaton.it/EatonIT/index.htm"><img class="icon" src="images/partners/eaton.png" style="width: 350px; margin-top: 15px"></a>
+				<a target="_blank" href="https://www.appuntiofficinastudenti.com/"><img class="icon" src="images/partners/officinastudenti.png" style="width: 500px; margin-top: 5px"></a>
 				<div class="service-content">
 					<h3 class="h05"></h3>
 					<p style="line-height: 2rem"></p>
