--- a/team.html
+++ b/team.html
@@ -284,7 +284,7 @@
 	                  	<img src="images/team/silvio.jpeg" alt="Shutterbug">	                     
 	                     <div class="item-text">
 	                     	<span class="folio-types">
-		     					      PR Responsible
+		     					    IT & PR Responsible
 		     					   </span>
 		     					   <h3 class="folio-title">Silvio Cuccia</h3>  	     					   
 		     					</div>                                        
@@ -301,6 +301,8 @@
 			</div> <!-- end folio-wrap -->	
 		
 		</div> <!-- end twelve -->
+
+		<!-- 6 PERSONE INVECE CHE 5 NEL CORE TEAM (coordinator e mo esclusi)
 		
 		<div class="col-twelve" style=" padding-bottom: 4%; padding-left: 3%; padding-right: 22%; width: 160%;">
 		
@@ -320,13 +322,16 @@
 	                  <a href="https://www.linkedin.com/in/silvio-cuccia-765761232/" class='details-link' title="details">
 	                  	<i class="fa fa-linkedin-square"></i>
 	                  </a>
-	               </div> <!-- end item-wrap -->	
+	               </div> <!-- end item-wrap 	
 
 	               <div id="03" class='hide'>
 							<h4>Silvio Cuccia</h4>
 							</div>               
 	        		</div> <!-- end folio-item -->
 
+		<div class="col-twelve" style=" padding-bottom: 4%; padding-left: 20%; padding-right: 40%; width: 190%;">
+		
+			<div id="folio-wrap3" class="bricks-wrapper">
 					<div class="brick folio-item" style="padding-right: 4%">
 	               <div class="item-wrap animate-this"  data-src="images/team/max.jpeg"  data-sub-html="#04" >
 	                  <a href="#" class="overlay">
