--- a/partners.html
+++ b/partners.html
@@ -294,6 +294,12 @@
 				</a>
 			</div> 
 
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.enea.it/it">
+					<img class="icon" src="images/partners/enea.jpg" style="width: 400px; margin-top: 20px">
+				</a>
+			</div> 
+
 		</div>
 
 	</div> -->
