FAQ + parlamento europeo

--- a/partners.html
+++ b/partners.html
@@ -60,7 +60,8 @@
 				<li class="current"><a class="smoothscroll" href="#home" title="">Partners</a></li>		
 				<li><a href="./team.html" target="_self">Team</a></li>
 				<li><a href="./news.html" target="_self">News</a></li>
-				<li><a href="./contact_us.html" target="_self">Contact us</a></li>				
+				<li><a href="./contact_us.html" target="_self">Contact us</a></li>
+				<li><a href="./faq.html" target="_self">FAQ</a></li>				
 			</ul>			
 
 			<ul class="header-social-list">
@@ -297,6 +298,12 @@
 			<div class="bgrid service-item animate-this">
 				<a target="_blank" href="https://www.enea.it/it">
 					<img class="icon" src="images/partners/enea.jpg" style="width: 400px; margin-top: 20px">
+				</a>
+			</div> 
+
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.europarl.europa.eu/portal/it">
+					<img class="icon" src="images/partners/parlamento europeo.png" style="width: 400px; margin-top: 20px">
 				</a>
 			</div> 
 
