--- a/team.html
+++ b/team.html
@@ -62,7 +62,8 @@
 				<li><a href="./partners.html" target="_self">Partners</a></li>
 				<li class="current"><a class="smoothscroll" href="#home" title="">Team</a></li>
 				<li><a href="./news.html" target="_self">News</a></li>
-				<li><a href="./contact_us.html" target="_self">Contact us</a></li>							
+				<li><a href="./contact_us.html" target="_self">Contact us</a></li>
+				<li><a href="./faq.html" target="_self">FAQ</a></li>							
 			</ul>			
 
 			<!--<p class="sponsor-text">
