--- a/news.html
+++ b/news.html
@@ -61,6 +61,7 @@
 				<li><a href="./team.html" target="_self">Team</a></li>
 				<li class="current"><a class="smoothscroll" href="#home" title="">News</a></li>		
 				<li><a href="./contact_us.html" target="_self">Contact us</a></li>
+				<li><a href="./faq.html" target="_self">FAQ</a></li>
 			</ul>			
 
 			<ul class="header-social-list">
