--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
    	<div class="row portfolio-content">
    		<div class="col-twelve" >
 		
-   			<div id="folio-wrap" class="bricks-wrapper" style="width: 200%;">					
+   			<div id="folio-wrap" class="bricks-wrapper" style="width: 100%; margin-left: 24.5%; margin-right: 24.5%;">					
 
 	        <div class="brick folio-item">
 	               <div class="item-wrap animate-this" data-src="images/background/ebec_italy_romator.jpg" data-sub-html="#02"> 	
@@ -282,7 +282,7 @@
 			
    			</div> <!-- end folio-wrap -->
 			
-			<div id="folio-wrap" class="bricks-wrapper" style="width: 200%;">
+			<div id="folio-wrap" class="bricks-wrapper" style="width: 100%; margin-left: 24.5%; margin-right: 24.5%;">
 			
 			<div class="brick folio-item" >
 	               <div class="item-wrap animate-this"  data-src="images/background/ebec_italy_napoli_2018.jpg"  data-sub-html="#04" >
