--- a/schedule.html
+++ b/schedule.html
@@ -134,7 +134,7 @@
 		<div class="services-list block-1-3 block-tab-full group">
 		   <div class="bgrid service-item animate-this">
 			   <a target="_blank" href="www.ebecitaly.com">
-				   <img class="icon" src="images/team/stonks.jpg" style="width: 200%; margin-left: 100%;">
+				   <img class="icon" src="images/team/stonks.jpg" style="width: 100%;">
 			   </a>
 		   </div> 
 
