--- a/about_us.html
+++ b/about_us.html
@@ -61,6 +61,7 @@
 				<li><a href="./team.html" target="_self">Team</a></li>
 				<li><a href="./news.html" target="_self">News</a></li>
 				<li><a href="./contact_us.html" target="_self">Contact us</a></li>	
+				<li><a href="./schedule.html" target="_self">Schedule & SG</a></li>
 				<li><a href="./faq.html" target="_self">FAQ</a></li>			
 			</ul>	
 			
