--- a/contact_us.html
+++ b/contact_us.html
@@ -62,6 +62,7 @@
 				<li><a href="./team.html" target="_self">Team</a></li>
 				<li><a href="./news.html" target="_self">News</a></li>
 				<li class="current"><a class="smoothscroll" href="#home" title="">Contact us</a></li>
+				<li><a href="./schedule.html" target="_self">Schedule & SG</a></li>
 				<li><a href="./faq.html" target="_self">FAQ</a></li>
 			</ul>	
 			<ul class="header-social-list">
