--- a/team.html
+++ b/team.html
@@ -63,6 +63,7 @@
 				<li class="current"><a class="smoothscroll" href="#home" title="">Team</a></li>
 				<li><a href="./news.html" target="_self">News</a></li>
 				<li><a href="./contact_us.html" target="_self">Contact us</a></li>
+				<li><a href="./schedule.html" target="_self">Schedule & SG</a></li>
 				<li><a href="./faq.html" target="_self">FAQ</a></li>							
 			</ul>			
 
