--- a/partners.html
+++ b/partners.html
@@ -308,6 +308,12 @@
 				</a>
 			</div> 
 
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://web.uniroma2.it/">
+					<img class="icon" src="images/partners/tor_vergata.png" style="width: 140px; margin-top: 20px">
+				</a>
+			</div> 
+
 		</div>
 
 	</div> -->
