nuvola new partner

--- a/partners.html
+++ b/partners.html
@@ -132,58 +132,35 @@
 		<div class="col-full">
 			<h1>MAIN PARTNER</h1>
 		</div> 
-	</div> 
+	</div>
 
-	<!--<div class="row services-content">
-
-		<div class="services-list block-1-2 block-tab-full group">
-
-			<div class="bgrid service-item animate-this" style="alignment: center">
-				<a target="_blank" href="https://www.polito.it"><img class="icon" src="images/partners/polito.png" style="width: 350px"></a>
-				<div class="service-content">
-					<h3 class="h05"></h3>
-				</div>
-			</div> 
-
-			<div class="bgrid service-item animate-this" style="alignment: center">
-				<div class="service-content">
-
-					<p style="color: #bfc7cf; line-height: 2rem">Athenaeum of reference in Italy and in the international context for engineering
-						and architectural studies. Tradition and innovation are the elements that identify its
-						stimulating environment, with a lot of opportunities.</p>
-				</div>
-			</div> 
-		</div> 
+	<div class="row services-content">
 
 
 		<div class="row narrow section-intro animate-this">
 			<div class="col-full">
 				<hr style="color: white">
 				<hr style="color: white; padding-bottom: 5rem">
-				<h1>TASK PARTNERS</h1>
 				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">CASE STUDY</h2>
 			</div> 
 
 
-			 <div class="services-list block-1-2 block-tab-full group">
+			 <div class="services-list block-1-1 block-tab-full group"> <!-- Qua cambia il numero appena c'è il secondo partner, quest comando è da ripetere per ogni blocco di due-->
 
 				<div class="bgrid service-item animate-this">
-					<a target="_blank" href="https://new.abb.com/"><img class="icon" src="images/partners/abb.png" style="height: 250px; width: 250px"></a>
+					<a target="_blank" href="https://www.nuvolaortodonzia.co.uk"><img class="icon" src="images/partners/nuvola.png" style="height: 30%; width: 30%"></a>
 					<div class="service-content">
-						<h3 class="h05">ABB</h3>
-						<p style="line-height: 2rem">Kick-start your career and grow with ABB! We are a pioneering technology
-							leader in electrification products, robotics and motion, industrial automation and power grids,
-							serving customers in utilities, industry and transport & infrastructure globally.
-							<span id="text_abb">ABB today is writing the future of industrial digitalization and driving the Energy
-							and Fourth Industrial Revolutions, pushing the boundaries of e-mobility to contribute to
-							a sustainable future. We operate in more than 100 countries with about 147,000 employees.
-							You can be part of this. Let’s write the future. Together.</span>
-						<span id="more_abb"><br><br>[show more...]</span>
-						<span id="less_abb"><br><br>[show less...]</span>
+						<h3 class="h05">Nuvola</h3>
+						<p style="line-height: 2rem">Nuvola®
+							clearly working
+							with you. <br> <!-- togli il br appena hai il secondo partner -->
+							The transparent aligner
+							that brings back your smile
+							at any age.
 						</p>
 					</div>
 				</div> 
-				
+				<!--
 				<div class="bgrid service-item animate-this">
 					<a target="_blank" href="http://www.eaton.it/EN/EatonIT/index.htm?override=1"><img class="icon" src="images/partners/eaton.png" style="height: 250px; width: 250px"></a>
 					<div class="service-content">
@@ -245,8 +222,8 @@
 
 			</div>
 		</div>
-
-	</div> -->
+	-->
+	</div>
 
 	<div class="row narrow section-intro animate-this">
 		<div class="col-full">
@@ -316,77 +293,8 @@
 
 		</div>
 
-	</div> -->
+	</div>
 	
-	<!-- <div class="row narrow section-intro animate-this">
-	
-			<div class="col-full">
-				<hr style="color: white">
-				<hr style="color: white; padding-bottom: 5rem">
-				<h1>PAST PARTNERS</h1>
-				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">CASE STUDY 2021</h2>
-			</div> 
-	
-			
-		 <div class="row services-content">
-
-		<div class="services-list block-1-3 block-tab-full group">
-
-			<div class="bgrid service-item animate-this">
-				<div class="service-content">
-					<h3 class="h05"></h3>
-				</div>
-
-			</div> <!-- end bgrid 
-			<div class="bgrid service-item animate-this" style="padding-top: 3%">
-				<a target="_blank" href="https://new.abb.com/it"><img class="icon" src="images/partners/abb.png" style="width: 250px"></a>
-				<div class="service-content">
-					<h3 class="h05"></h3>
-				</div>
-			</div> <!-- end bgrid 
-
-			<div class="bgrid service-item animate-this">
-				<div class="service-content">
-					<h3 class="h05"></h3>
-				</div>
-
-			</div> <!-- end bgrid -->
-
-		</div> <!-- end services-list -->
-
-	</div> <!-- end services-content -->
-	
-       </div>
-
-<!-- PARTNERS CASE STUDY 2019 -->
-	
-<!--	<div class="row narrow section-intro animate-this">
-	
-		<div class="col-full">
-			<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">CASE STUDY 2019</h2>
-		</div> <!-- end col-full 
-
-
-		<div class="services-list block-1-2 block-tab-full group">
-
-			<div class="bgrid service-item animate-this" style="padding-top: 5%">
-				<a target="_blank" href="https://www.capgemini.com/it-it/"><img class="icon" src="images/partners/capgemini.jpg" style="width: 300px; margin-top: 40px"></a>
-				<div class="service-content">
-					<h3 class="h05"></h3>
-					<p style="line-height: 2rem"></p>
-				</div>
-			</div> <!-- end bgrid 
-
-			<div class="bgrid service-item animate-this">
-				<a target="_blank" href="https://www.credem.it/content/credem/it/privati-e-famiglie.html"><img class="icon" src="images/partners/credembanca.jpg" style="width: 250px; margin-top: 15px"></a>
-				<div class="service-content">
-					<h3 class="h05"></h3>
-					<p style="line-height: 2rem"></p>
-				</div>
-			</div> <!-- end bgrid -->
-
-		</div> <!-- end services-list -->
-	</div> <!-- end row -->
 
 	 <div class="row narrow section-intro animate-this">
 	
@@ -420,6 +328,7 @@
 
 		</div> <!-- end services-list -->
 	</div> <!-- end row -->
+	
 	
 	</section> 
 	
