--- a/team.html
+++ b/team.html
@@ -248,8 +248,8 @@
 		     					   <h3 class="folio-title">Dario Gagliarde</h3>
 		     					</div>                                        
 	                  </a>
-	                  <a href="https://www.instagram.com/dario_gagliarde/" class='details-link' title="details">
-	                  	<i class="fa fa-instagram"></i>
+	                  <a href="http://linkedin.com/in/dario-gagliarde-61069b237" class='details-link' title="details">
+	                  	<i class="fa fa-linkedin-square"></i>
 	                  </a>
 	               </div> <!-- end item-wrap -->
 
