--- a/partners.html
+++ b/partners.html
@@ -136,6 +136,92 @@
 
 	<div class="row services-content">
 
+		<div class="row narrow section-intro animate-this">
+			<div class="col-full">
+				<hr style="color: white">
+				<hr style="color: white; padding-bottom: 5rem">
+				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">GENERAL PARTNERS</h2>
+			</div> 
+
+		<div class="services-list block-1-2 block-tab-full group"> <!-- Qua cambia il numero appena c'è il secondo partner, quest comando è da ripetere per ogni blocco di due-->
+
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.enginsoft.com//"><img class="icon" src="images/partners/enginesoft.png" style="height: 100%; width: 100%"></a>
+				<div class="service-content">
+					<h3 class="h05">Enginsoft</h3>
+					<p style="line-height: 2rem">
+						EnginSoft is one of the leading technology transfer companies 
+						in the field of Simulation Based Engineering Science (SBES).
+						 Since its foundation in 1984, through our expansion in the
+						  sector in the mid-Seventies, to the present day with a global presence,
+						   EnginSoft has always been at the forefront of technological innovation.
+					</p>
+				</div>
+			</div> 
+			
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="http://www.eaton.it/EN/EatonIT/index.htm?override=1"><img class="icon" src="images/partners/BNA.png" style="height: 100%; width: 100%"></a>
+				<div class="service-content">
+					<h3 class="h05">BNA</h3>
+					<p style="line-height: 2rem">
+						Buzzi, Notaro & Antonielli d'Oulx 
+						is a consultancy firm in the intellectual 
+						property sector that offers its customers 
+						the benefits of complete and efficient assistance 
+						in the field of patents, trademarks, design and copyright, 
+						nationally and internationally. A total commitment to meeting 
+						the needs of clients has been the key to the success of the 
+						firm since its inception in 1992.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--
+	<div class="row narrow section-intro animate-this">
+		<div class="col-full">
+			<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">TEAM DESIGN</h2>
+		</div>
+
+		 <div class="services-list block-1-2 block-tab-full group">
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="http://www.skoda-auto.com/"><img class="icon" src="images/partners/skoda.png" style="height: 250px; width: 250px"></a>
+				<div class="service-content">
+					<h3 class="h05">ŠKODA AUTO a.s.</h3>
+					<p style="line-height: 2rem">ŠKODA AUTO is one the biggest Czech companies with more then 100 years
+						history of development and producing cars. 
+						<span id="text_skoda">At ŠKODA AUTO you can work
+						with top technology in our Development Centre, and we will introduce you the
+						art of preparing automobile production, the running of welding and assembly
+						lines, distribution, sales and customer service. ŠKODA AUTO is boosting its
+						team and we will happily welcome you among more than 30,000 satisfied
+						employees worldwide.</span>
+					<span id="more_skoda"><br><br>[show more...]</span>
+					<span id="less_skoda"><br><br>[show less...]</span>
+					</p>
+				</div>
+			</div> 
+
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.danieli.com/"><img class="icon" src="images/partners/danieli.png" style="height: 250px; width: 250px"></a>
+				<div class="service-content">
+					<h3 class="h05">Danieli Grandi Officine</h3>
+					<p style="line-height: 2rem">Danieli is a full cycle provider from raw materials to finished products in the metals industry.
+						We are multicultural sparkling team with deep knowledge of our business.
+						<span id="text_dan">Our professional life is dedicated to understanding and satisfying the customer’s needs through our experience, continuous team-up and flexibility.
+						We turn ideas into end-to-end solutions of technological excellence to create added value for our customers and stakeholders.
+						We empower people, our main asset, with courage and creativity.</span>
+					<span id="more_dan"><br><br>[show more...]</span>
+					<span id="less_dan"><br><br>[show less...]</span>
+					</p>
+				</div>
+			</div> 
+
+		</div>
+	</div>
+-->
+</div>
+
 
 		<div class="row narrow section-intro animate-this">
 			<div class="col-full">
@@ -145,42 +231,38 @@
 			</div> 
 
 
-			 <div class="services-list block-1-1 block-tab-full group"> <!-- Qua cambia il numero appena c'è il secondo partner, quest comando è da ripetere per ogni blocco di due-->
+			 <div class="services-list block-1-2 block-tab-full group"> <!-- Qua cambia il numero appena c'è il secondo partner, quest comando è da ripetere per ogni blocco di due-->
 
 				<div class="bgrid service-item animate-this">
-					<a target="_blank" href="https://www.nuvolaortodonzia.co.uk"><img class="icon" src="images/partners/nuvola.png" style="height: 30%; width: 30%"></a>
+					<a target="_blank" href="https://www.nuvolaortodonzia.co.uk"><img class="icon" src="images/partners/nuvola.png" style="height: 70%; width: 70%"></a>
 					<div class="service-content">
 						<h3 class="h05">Nuvola</h3>
 						<p style="line-height: 2rem">Nuvola®
 							clearly working
-							with you. <br> <!-- togli il br appena hai il secondo partner -->
+							with you.
 							The transparent aligner
 							that brings back your smile
 							at any age.
 						</p>
 					</div>
 				</div> 
-				<!--
+				
 				<div class="bgrid service-item animate-this">
-					<a target="_blank" href="http://www.eaton.it/EN/EatonIT/index.htm?override=1"><img class="icon" src="images/partners/eaton.png" style="height: 250px; width: 250px"></a>
+					<a target="_blank" href="https://tauengineering.net/home-page/profilo/"><img class="icon" src="images/partners/tau.png" style="height: 80%; width: 80%"></a>
 					<div class="service-content">
-						<h3 class="h05">Eaton</h3>
+						<h3 class="h05">TAU</h3>
 						<p style="line-height: 2rem">
-							We make what matters work.<br>
-							At Eaton, we believe that power is a fundamental part of just about everything people do.
-							That’s why we’re dedicated to helping our customers find new ways to manage electrical,
-							hydraulic and mechanical power more efficiently, safely and sustainably. 
-							<span id="text_eaton">To improve people’s lives,
-							the communities where live and work, and the planet our future generations depend upon.
-							Because this is what really matters. And we’re here to make sure it works.</span>
-						<span id="more_eaton"><br><br>[show more...]</span>
-						<span id="less_eaton"><br><br>[show less...]</span>
+							TAU Engineering s.r.l. has been founded in January 2020
+							 with the acquisition of the business branch of 
+							 "TAU Trasporti e Ambiente Urbano s.r.l.", operative since 1985
+							  in the transport engineering sector
+							 through infrastructure planning and design activities.
 						</p>
 					</div>
 				</div>
 			</div>
 		</div>
- 
+		<!--
 		<div class="row narrow section-intro animate-this">
 			<div class="col-full">
 				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">TEAM DESIGN</h2>
