--- a/partners.html
+++ b/partners.html
@@ -160,7 +160,7 @@
 			</div> 
 			
 			<div class="bgrid service-item animate-this">
-				<a target="_blank" href="http://www.eaton.it/EN/EatonIT/index.htm?override=1"><img class="icon" src="images/partners/BNA.png" style="height: 100%; width: 100%"></a>
+				<a target="_blank" href="https://www.bnaturin.com/it/"><img class="icon" src="images/partners/BNA.png" style="height: 100%; width: 100%"></a>
 				<div class="service-content">
 					<h3 class="h05">BNA</h3>
 					<p style="line-height: 2rem">
