--- a/partners.html
+++ b/partners.html
@@ -318,7 +318,19 @@
 
 	<div class="row services-content">
 
+		<div class="services-list block-1-2 block-tab-full group">
+
+			<div class="service-item animate-this">
+				<a target="_blank" href="https://www.polito.it">
+					<img class="icon" src="images//partners/polito.png" style="width: 350px; background-color: white;"/>
+				</a>
+			</div>
+
+
+		</div> <!-- end services-list -->
+
 		 <div class="services-list block-1-3 block-tab-full group">
+
 			<div class="bgrid service-item animate-this">
 				<a target="_blank" href="https://www.regione.piemonte.it/web/">
 					<img class="icon" src="images/partners/reg_piemonte.png" style="width: 250px">
