GIURIA/AWARDS/PARTNERS
blbl

--- a/about_us.html
+++ b/about_us.html
@@ -189,7 +189,7 @@
    			   <h1>ABOUT EBEC</h1>
    			
    			   <p class="lead" style="color:#bfc7cf; line-height: 2.5rem; font-size: 1.8rem">
-				   <span style="color: #ffffff;">European BEST Engineering Competition (EBEC)</span></a>
+				   <span style="color: #ffffff;">European BEST Engineering Competition (EBEC)</span>
 				   is a 3 level, team-based competition, on 3 categories - Team Design, Innovative Design and Case Study.<br><br>
 				   In <span style="color: #fff;">Team Design</span> teams are solving tasks within a limited time and a limited availability
 				   of materials. The desired outcome is a device that has to perform the needed actions.<br><br>
@@ -205,6 +205,32 @@
 
    	   </div> <!-- end col-full -->
    	</div> <!-- end row --> <!-- PIRAMIDE EBEC (font piramide: Franklin Gothic)-->
+
+	   <div class="row narrow section-intro with-bottom-sep animate-this">
+		<div class="col-full">
+			
+			   <h1>ABOUT EBEC'S JURY</h1>
+			
+			   <p class="lead" style="color:#bfc7cf; line-height: 2.5rem; font-size: 1.8rem">
+				<span style="color: #ffffff;">EBEC</span>
+				has a <span style="color: #fff;">jury</span>
+				of excellence made up of delegates chosen by the companies. <br>
+				In this way the teams can be evaluated by competent people 
+				who work in leading national and international companies. <br><br>
+				<span style="color: #fff;">In EBEC Italy 2022</span> the jury is composed by:<br>
+				<br> <span style="color: #fff;">Giovanni Campogiani</span> (BNA)
+				<br> <span style="color: #fff;">Luciano Bosotti</span> (BNA)
+				<br> <span style="color: #fff;">Filippo Veglia</span> (TAU)
+				<br> <span style="color: #fff;">Valerio Fornari</span> (Nuvola)
+				<br> <span style="color: #fff;">Ludovico Massafra</span> (Nuvola)
+				<br> <span style="color: #fff;">Fabio Castino</span> (Lilitech)
+				<br> <span style="color: #fff;">Simona Genovese</span> (Lilitech)
+				<br> <span style="color: #fff;">Florencia Frangapane</span> (Birra Madama)
+				
+
+
+	   </div> <!-- end col-full -->
+	</div> <!-- end row --> <!-- PIRAMIDE EBEC (font piramide: Franklin Gothic)-->
 
    	<div class="row services-content">
 	
