--- a/partners.html
+++ b/partners.html
@@ -262,31 +262,27 @@
 				</div>
 			</div>
 		</div>
-		<!--
+		
 		<div class="row narrow section-intro animate-this">
 			<div class="col-full">
-				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">TEAM DESIGN</h2>
+				<hr style="color: white">
+				<hr style="color: white; padding-bottom: 5rem">
+				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">INNOVATIVE DESIGN</h2>
 			</div>
 
-			 <div class="services-list block-1-2 block-tab-full group">
+			 <div class="services-list block-1-1 block-tab-full group">
 				<div class="bgrid service-item animate-this">
-					<a target="_blank" href="http://www.skoda-auto.com/"><img class="icon" src="images/partners/skoda.png" style="height: 250px; width: 250px"></a>
+					<a target="_blank" href="https://www.lilitech.com/landing"><img class="icon" src="images/partners/lilitech.svg" style="height: 60%; width: 60%; background-color: white;"></a>
 					<div class="service-content">
-						<h3 class="h05">ŠKODA AUTO a.s.</h3>
-						<p style="line-height: 2rem">ŠKODA AUTO is one the biggest Czech companies with more then 100 years
-							history of development and producing cars. 
-							<span id="text_skoda">At ŠKODA AUTO you can work
-							with top technology in our Development Centre, and we will introduce you the
-							art of preparing automobile production, the running of welding and assembly
-							lines, distribution, sales and customer service. ŠKODA AUTO is boosting its
-							team and we will happily welcome you among more than 30,000 satisfied
-							employees worldwide.</span>
-						<span id="more_skoda"><br><br>[show more...]</span>
-						<span id="less_skoda"><br><br>[show less...]</span>
+						<h3 class="h05">Lilitech</h3>
+						<p style="line-height: 2rem">
+							Living life in technology. <br> Lilitech is based on the principle of living a life supported by technology.
+							Thanks to Lilitech you will be able to create the best solution for your needs, 
+							counting on the support of selected professional figures who whill help you make your dream home and your project a reality.
 						</p>
 					</div>
 				</div> 
-
+				<!--
 				<div class="bgrid service-item animate-this">
 					<a target="_blank" href="https://www.danieli.com/"><img class="icon" src="images/partners/danieli.png" style="height: 250px; width: 250px"></a>
 					<div class="service-content">
@@ -305,6 +301,77 @@
 			</div>
 		</div>
 	-->
+	</div>
+
+	<div class="row narrow section-intro animate-this">
+		<div class="col-full">
+			<hr style="color: white">
+			<hr style="color: white; padding-bottom: 5rem">
+			<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">TEAM DESIGN</h2>
+		</div>
+
+		 <div class="services-list block-1-1 block-tab-full group">
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.birramadama.it/chiemadama/"><img class="icon" src="images/partners/logo_BIRRAMADAMA.PNG" style="height: 25%; width: 25%; background-color: white;"></a>
+				<div class="service-content">
+					<h3 class="h05">Birra Madama</h3>
+					<p style="line-height: 2rem">
+						Birra Madama is a beer firm born in 2014 in Turin, 
+						with the idea of producing high-quality, easy-to-drink craft beer. <br>
+						Distinctive features of the project are the passion for the product, 
+						care in the customer experience and the ambition to go beyond borders.
+					</p>
+				</div>
+			</div> 
+			<!--
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.danieli.com/"><img class="icon" src="images/partners/danieli.png" style="height: 250px; width: 250px"></a>
+				<div class="service-content">
+					<h3 class="h05">Danieli Grandi Officine</h3>
+					<p style="line-height: 2rem">Danieli is a full cycle provider from raw materials to finished products in the metals industry.
+						We are multicultural sparkling team with deep knowledge of our business.
+						<span id="text_dan">Our professional life is dedicated to understanding and satisfying the customer’s needs through our experience, continuous team-up and flexibility.
+						We turn ideas into end-to-end solutions of technological excellence to create added value for our customers and stakeholders.
+						We empower people, our main asset, with courage and creativity.</span>
+					<span id="more_dan"><br><br>[show more...]</span>
+					<span id="less_dan"><br><br>[show less...]</span>
+					</p>
+				</div>
+			</div> 
+
+		</div>
+	</div>
+-->
+</div>
+
+	<!-- PREMIIII -->
+
+	<div class="row services-content">
+
+		<div class="row narrow section-intro animate-this">
+			<div class="col-full">
+				<hr style="color: white">
+				<hr style="color: white; padding-bottom: 5rem">
+				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">AWARDS</h2>
+			</div> 
+
+		<div class="services-list block-1-1 block-tab-full group"> <!-- Qua cambia il numero appena c'è il secondo partner, quest comando è da ripetere per ogni blocco di due-->
+
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.meccano.com/it_it"><img class="icon" src="images/partners/logo_MECCANO.PNG" style="height: 70%; width: 70%"></a>
+				<div class="service-content">
+					<h3 class="h05">Meccano</h3>
+					<p style="line-height: 2rem">
+						Meccano is one of the most famous building systems in the world
+						 and its invention dates back to 1898. Over a hundred years later, 
+						 the values and objectives of the past remain unchanged, 
+						 inspiring the imagination of all the builders of the world. <br>
+						 Meccano - your imagination takes shape!
+					</p>
+				</div>
+			</div> 
+		</div>
+		</div>
 	</div>
 
 	<div class="row narrow section-intro animate-this">
