--- a/partners.html
+++ b/partners.html
@@ -248,16 +248,13 @@
 				</div> 
 				
 				<div class="bgrid service-item animate-this">
-					<a target="_blank" href="https://tauengineering.net/home-page/profilo/"><img class="icon" src="images/partners/tau.png" style="height: 80%; width: 80%"></a>
+					<a target="_blank" href="https://tau.group/"><img class="icon" src="images/partners/tau.png" style="height: 80%; width: 80%"></a>
 					<div class="service-content">
 						<h3 class="h05">TAU</h3>
 						<p style="line-height: 2rem">
-							TAU Engineering s.r.l. has been founded in January 2020
-							 with the acquisition of the business branch of 
-							 "TAU Trasporti e Ambiente Urbano s.r.l.", operative since 1985
-							  in the transport engineering sector
-							 through infrastructure planning and design activities.
-						</p>
+							E-mobility is powered by its core - the electric motor.
+							We at Tau are at the very core of the core: the copper winding wire, the magnetic core, the electrical steel. <br>
+							We just make it better.
 					</div>
 				</div>
 			</div>
